--- a/my-app/src/keyboard/Keyboard.css
+++ b/my-app/src/keyboard/Keyboard.css
@@ -10,9 +10,25 @@
     background-color: white;
 }
 
+
 .sharpFlatNotes button {
     padding: 40px 10px;
     color: white;
+    position: relative;
     background-color: black;
 }
 
+.naturalC button {
+    position: relative;
+    left: 42px;
+}
+
+.DFlat {
+    position: relative;
+    left: 20px;
+}
+
+.naturalD {
+    position: relative;
+    left: 20px;
+}
