--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -2,6 +2,13 @@
   text-align: center;
 }
 
+.mainTitle {
+  font-family: 'Montserrat', sans-serif;
+  padding: 50px;
+}
+
+
+/* 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +42,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
