--- a/my-app/src/keyboard/Keyboard.css
+++ b/my-app/src/keyboard/Keyboard.css
@@ -9,6 +9,7 @@
     color: black;
     background-color: white;
     z-index: 1;
+    /* font-family: 'Montserrat', sans-serif; */
 }
 
 
@@ -18,6 +19,7 @@
     position: relative;
     background-color: black;
     z-index: 2;
+    /* font-family: 'Montserrat', sans-serif; */
 }
 
 .naturalC button {
