--- a/my-app/src/keyboard/featuredSongs.css
+++ b/my-app/src/keyboard/featuredSongs.css
@@ -1,4 +1,6 @@
 .featuredSongs button {
     margin: 30px 10px;
     padding: 20px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
 }
