--- a/my-app/src/keyboard/Keyboard.css
+++ b/my-app/src/keyboard/Keyboard.css
@@ -103,3 +103,14 @@
         padding: 140px 30px;
     }
 }
+
+@media (min-width: 1370px) {
+
+    .naturalNotes button {
+        padding: 240px 70px;
+    }
+
+    .sharpFlatNotes button {
+        padding: 140px 30px;
+    }
+}
